--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(transportStream)
 add_executable(mediaServer test.cpp)
 target_include_directories(mediaServer
         PRIVATE ${PROJECT_SOURCE_DIR}/src/server
+        PRIVATE ${PROJECT_SOURCE_DIR}/src/nalu
         )
 
 target_link_libraries(mediaServer PRIVATE server)
