--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@
 add_subdirectory(bitStream)
 add_subdirectory(nalu)
 add_subdirectory(adts)
-add_subdirectory(configurationRecord)
+#[[add_subdirectory(configurationRecord)]]
 add_subdirectory(server)
 add_subdirectory(socket)
 add_subdirectory(threadPool)
