--- a/src/nalu/CMakeLists.txt
+++ b/src/nalu/CMakeLists.txt
@@ -10,7 +10,10 @@ add_library(
 target_include_directories(nalu
         PRIVATE ${PROJECT_SOURCE_DIR}/src/bitStream
         PRIVATE ${PROJECT_SOURCE_DIR}/src/transportStream
+        PRIVATE ${PROJECT_SOURCE_DIR}/src/utils
         )
 
 
-target_link_libraries(nalu PRIVATE transportStream)
+target_link_libraries(nalu
+        PRIVATE transportStream
+        )
