--- a/src/protocol/CMakeLists.txt
+++ b/src/protocol/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(protocol rtsp.cpp rtpPacket.cpp)
 target_include_directories(protocol
         PUBLIC ${PROJECT_SOURCE_DIR}/src/nalu
         PUBLIC ${PROJECT_SOURCE_DIR}/src/adts
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/utils
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/utils
         PRIVATE ${PROJECT_SOURCE_DIR}/src/socket
         PRIVATE ${PROJECT_SOURCE_DIR}/src/bitStream
         PUBLIC ${PROJECT_SOURCE_DIR}/src/transportStream
