--- a/src/transportStream/CMakeLists.txt
+++ b/src/transportStream/CMakeLists.txt
@@ -10,4 +10,6 @@ target_include_directories(transportStream
         PUBLIC ${PROJECT_SOURCE_DIR}/src/bitStream
         PRIVATE ${PROJECT_SOURCE_DIR}/src/nalu
         PRIVATE ${PROJECT_SOURCE_DIR}/src/adts
+        PRIVATE ${PROJECT_SOURCE_DIR}/src/utils
+        PRIVATE ${PROJECT_SOURCE_DIR}/src/aaaa
         )
