--- a/src/threadPool/CMakeLists.txt
+++ b/src/threadPool/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(threadPool threadPool.cpp task.cpp rtspTask.cpp)
 target_include_directories(threadPool
         PUBLIC ${PROJECT_SOURCE_DIR}/src/socket
         PUBLIC ${PROJECT_SOURCE_DIR}/src/protocol
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/utils
         )
 target_link_libraries(threadPool
         PRIVATE socket
