--- a/src/threadPool/CMakeLists.txt
+++ b/src/threadPool/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 
 
-add_library(threadPool threadPool.cpp task.cpp rtspTask.cpp)
+add_library(threadPool threadPool.cpp task.cpp rtspTask.cpp httpTask.cpp)
 target_include_directories(threadPool
         PUBLIC ${PROJECT_SOURCE_DIR}/src/socket
         PUBLIC ${PROJECT_SOURCE_DIR}/src/protocol
