--- a/src/socket/CMakeLists.txt
+++ b/src/socket/CMakeLists.txt
@@ -2,5 +2,6 @@
 
 
 add_library(socket TcpSocket.cpp UdpSocket.cpp)
-
-target_link_libraries(socket PRIVATE ws2_32.lib)
+if (WIN32)
+    target_link_libraries(socket PRIVATE ws2_32.lib)
+endif ()
