--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,12 +6,14 @@
 add_subdirectory(bitStream)
 add_subdirectory(nalu)
 add_subdirectory(adts)
+add_subdirectory(AVPacket)
 add_subdirectory(server)
 add_subdirectory(socket)
 add_subdirectory(threadPool)
 add_subdirectory(protocol)
 add_subdirectory(utils)
 add_subdirectory(transportStream)
+add_subdirectory(flashVideo)
 
 
 add_executable(mediaServer test.cpp)
