--- a/src/protocol/CMakeLists.txt
+++ b/src/protocol/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿
 
 
-add_library(protocol rtsp.cpp rtspSendData.cpp rtspReceiveData.cpp http.cpp packet.cpp)
+add_library(protocol rtsp.cpp rtspSendData.cpp rtspReceiveData.cpp http.cpp httpHls.cpp httpFlv.cpp)
 
 target_include_directories(protocol
         PUBLIC ${PROJECT_SOURCE_DIR}/src/nalu
@@ -10,6 +10,8 @@ target_include_directories(protocol
         PRIVATE ${PROJECT_SOURCE_DIR}/src/socket
         PRIVATE ${PROJECT_SOURCE_DIR}/src/bitStream
         PUBLIC ${PROJECT_SOURCE_DIR}/src/transportStream
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/flashVideo
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/AVPacket
         )
 
 target_link_libraries(protocol
@@ -18,4 +20,5 @@ target_link_libraries(protocol
         PRIVATE utils
         PRIVATE bitStream
         PUBLIC transportStream
+        PUBLIC flashVideo
         )
