--- a/src/AVPacket/CMakeLists.txt
+++ b/src/AVPacket/CMakeLists.txt
@@ -5,8 +5,9 @@
 add_library(AVPacket AVPacket.cpp)
 
 target_include_directories(AVPacket
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/nalu
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/transportStream
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/adts
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/bitStream
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/nalu
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/transportStream
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/adts
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/bitStream
+        PUBLIC ${PROJECT_SOURCE_DIR}/src/utils
         )
