--- a/src/protocol/CMakeLists.txt
+++ b/src/protocol/CMakeLists.txt
@@ -8,9 +8,9 @@ target_include_directories(protocol
         PUBLIC ${PROJECT_SOURCE_DIR}/src/adts
         PUBLIC ${PROJECT_SOURCE_DIR}/src/utils
         PRIVATE ${PROJECT_SOURCE_DIR}/src/socket
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/bitStream
+        #[[  PRIVATE ${PROJECT_SOURCE_DIR}/src/bitStream]]
         PUBLIC ${PROJECT_SOURCE_DIR}/src/transportStream
-        PUBLIC ${PROJECT_SOURCE_DIR}/src/flashVideo
+        PRIVATE ${PROJECT_SOURCE_DIR}/src/flashVideo
         PUBLIC ${PROJECT_SOURCE_DIR}/src/AVPacket
         )
 
@@ -21,4 +21,5 @@ target_link_libraries(protocol
         PRIVATE bitStream
         PUBLIC transportStream
         PUBLIC flashVideo
+        PRIVATE AVPacket
         )
