--- a/src/nalu/CMakeLists.txt
+++ b/src/nalu/CMakeLists.txt
@@ -6,14 +6,6 @@ add_library(
         NALPicture.cpp
 )
 
-
 target_include_directories(nalu
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/bitStream
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/transportStream
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/utils
-        )
-
-
-target_link_libraries(nalu
-        PRIVATE transportStream
+        PRIVATE ${PROJECT_SOURCE_DIR}/src
         )
