--- a/src/threadPool/CMakeLists.txt
+++ b/src/threadPool/CMakeLists.txt
@@ -2,10 +2,9 @@
 
 
 add_library(threadPool threadPool.cpp task.cpp rtspTask.cpp httpTask.cpp)
+
 target_include_directories(threadPool
-        PUBLIC ${PROJECT_SOURCE_DIR}/src/socket
-        PUBLIC ${PROJECT_SOURCE_DIR}/src/protocol
-        PUBLIC ${PROJECT_SOURCE_DIR}/src/utils
+        PRIVATE ${PROJECT_SOURCE_DIR}/src
         )
 target_link_libraries(threadPool
         PRIVATE socket
