优化推流逻辑

--- a/src/AVPacket/CMakeLists.txt
+++ b/src/AVPacket/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 
 
-add_library(AVPacket AVPacket.cpp)
+add_library(AVPacket AVReadPacket.cpp AVWritePacket.cpp)
 
 
 target_include_directories(AVPacket
