--- a/src/AVPacket/CMakeLists.txt
+++ b/src/AVPacket/CMakeLists.txt
@@ -9,4 +9,6 @@ target_include_directories(AVPacket
         PRIVATE ${PROJECT_SOURCE_DIR}/src
         )
 
-target_link_libraries(AVPacket PRIVATE transportStream)
+target_link_libraries(AVPacket
+        PRIVATE bitStream log nalu adts transportStream
+        )
