--- a/src/flashVideo/CMakeLists.txt
+++ b/src/flashVideo/CMakeLists.txt
@@ -7,3 +7,5 @@ add_library(flashVideo FLVHeader.cpp FLVTagHeader.cpp FLVScriptTag.cpp FLVVideoT
 target_include_directories(flashVideo
         PRIVATE ${PROJECT_SOURCE_DIR}/src
         )
+
+target_link_libraries(flashVideo PRIVATE bitStream)
