--- a/src/adts/CMakeLists.txt
+++ b/src/adts/CMakeLists.txt
@@ -5,7 +5,6 @@ add_library(adts adtsReader.cpp adtsHeader.cpp)
 
 
 target_include_directories(adts
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/bitStream
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/utils
-        PRIVATE ${PROJECT_SOURCE_DIR}/src/transportStream
+        PRIVATE ${PROJECT_SOURCE_DIR}/src
         )
+target_link_libraries(adts PRIVATE bitStream utils)
