修改编译流程

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@
 project(mediaServer)
 
 
+message(STATUS ${CMAKE_BUILD_TYPE}11122)
+set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/${CMAKE_BUILD_TYPE}")
+
 #add_compile_options("/utf-8")
 
 add_compile_definitions("_CRT_SECURE_NO_WARNINGS")
