--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,3 +24,5 @@ target_include_directories(mediaServer
 
 target_link_libraries(mediaServer PRIVATE server)
 
+
+install(TARGETS mediaServer DESTINATION bin)
